profile and login APIs updated
